# cmake-tutorial

./: Dockerfile  build-all.sh  clean-builds.sh  presentation.txt  run-in-docker.sh
0-cmake-language/: CMakeLists.txt
1-calculator/: CMakeLists.txt  calculator.c
10-calculator--tester-test-list-autogen-custom-target/: CMakeGraphVizOptions.cmake  math.h
10-calculator--tester-test-list-autogen-custom-target/math_lib_int/: CMakeLists.txt
10-calculator--tester-test-list-autogen-custom-target/scripts/: tester_autogen.py
10-calculator--tester-test-list-autogen-custom-target/tester/: CMakeLists.txt  tester.c  tester.cmake
10-calculator--tester-test-list-autogen-custom-target/tester/tests/test_sub/: CMakeLists.txt
2-calculator--math-lib/: CMakeLists.txt  calculator.c
2-calculator--math-lib/math_lib/: math_lib.c
3-calculator--math-lib-subdir-and-interface/: CMakeLists.txt  calculator.c
3-calculator--math-lib-subdir-and-interface/math_lib/: math_lib.c
4-calculator--configure-file--version/: CMakeLists.txt  calculator.c  version.h.in
4-calculator--configure-file--version/math_lib/: CMakeLists.txt
4-calculator--configure-file--version/math_lib/include/: math_lib.h
5-calculator--int-and-float/: CMakeLists.txt
5-calculator--int-and-float/math_lib_float/include/: math_lib_float.h
6-calculator--tester/: calculator.c
6-calculator--tester/tester/: CMakeLists.txt  tester.c
7-calculator--tester-lib-per-test/: CMakeLists.txt
7-calculator--tester-lib-per-test/math_lib_int/include/: math_lib_int.h
7-calculator--tester-lib-per-test/tester/: CMakeLists.txt  tester.c  tester.cmake  tester_assert.c
8-calculator--tester-test-list-property/math_lib_float/: CMakeLists.txt  math_lib_float.c
8-calculator--tester-test-list-property/tester/: CMakeLists.txt  tester.cmake  tester_assert.h
8-calculator--tester-test-list-property/tester/tests/: CMakeLists.txt
8-calculator--tester-test-list-property/tester/tests/test_add/: test_add.c
8-calculator--tester-test-list-property/tester/tests/test_div/: test_div.c
9-calculator--tester-test-list-autogen/: CMakeLists.txt
9-calculator--tester-test-list-autogen/math_lib_int/: math_lib_int.c
9-calculator--tester-test-list-autogen/scripts/: tester_autogen.py
9-calculator--tester-test-list-autogen/tester/: CMakeLists.txt  tester.c  tester.cmake
9-calculator--tester-test-list-autogen/tester/tests/test_add/: CMakeLists.txt
9-calculator--tester-test-list-autogen/tester/tests/test_div/: CMakeLists.txt
9-calculator--tester-test-list-autogen/tester/tests/test_mul/: CMakeLists.txt  test_mul.c
9-calculator--tester-test-list-autogen/tester/tests/test_sub/: test_sub.c
